# vibebuddy-app

./: LICENSE  README.md
.github/workflows/: build.yml
bubble/: index.html
scripts/: gen-icons.mjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
