[package]
name = "vibebuddy-app"
version = "0.3.2"
description = "VibeBuddy desktop bubble — your agent's busy, come hang out."
edition = "2021"
license = "MIT"

[lib]
name = "vibebuddy_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
